// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Unit renders correctly elsewhere 1`] = `
<div
  className="sc-bdVaJa jZZYJj"
>
  <div
    className="sc-bwzfXH cmhBNl gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "36.0625%",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAHABQDASIAAhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAAAAIE/8QAFwEAAwEAAAAAAAAAAAAAAAAAAAECBP/aAAwDAQACEAMQAAABzWXhkC//xAAVEAEBAAAAAAAAAAAAAAAAAAABEP/aAAgBAQABBQIb/8QAFBEBAAAAAAAAAAAAAAAAAAAAEP/aAAgBAwEBPwE//8QAFBEBAAAAAAAAAAAAAAAAAAAAEP/aAAgBAgEBPwE//8QAFBABAAAAAAAAAAAAAAAAAAAAEP/aAAgBAQAGPwJ//8QAFhABAQEAAAAAAAAAAAAAAAAAAAER/9oACAEBAAE/IRqv/9oADAMBAAIAAwAAABCD/wD/xAAVEQEBAAAAAAAAAAAAAAAAAAABEP/aAAgBAwEBPxBn/8QAFREBAQAAAAAAAAAAAAAAAAAAARD/2gAIAQIBAT8QSf/EABgQAAMBAQAAAAAAAAAAAAAAAAABESEx/9oACAEBAAE/EIqCvpDeH//Z"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "transitionDelay": "500ms",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 1248px) 100vw, 1248px"
        srcSet="/static/92968298086d2e2ffc2294df60e687ef/82399/puroflux_home_hero_sample.jpg 313w,
/static/92968298086d2e2ffc2294df60e687ef/80a7f/puroflux_home_hero_sample.jpg 624w,
/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg 1248w,
/static/92968298086d2e2ffc2294df60e687ef/2e0c6/puroflux_home_hero_sample.jpg 1600w"
      />
      <img
        alt=""
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 1248px) 100vw, 1248px"
        src="/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg"
        srcSet="/static/92968298086d2e2ffc2294df60e687ef/82399/puroflux_home_hero_sample.jpg 313w,
/static/92968298086d2e2ffc2294df60e687ef/80a7f/puroflux_home_hero_sample.jpg 624w,
/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg 1248w,
/static/92968298086d2e2ffc2294df60e687ef/2e0c6/puroflux_home_hero_sample.jpg 1600w"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcset=\\"/static/92968298086d2e2ffc2294df60e687ef/82399/puroflux_home_hero_sample.jpg 313w,
/static/92968298086d2e2ffc2294df60e687ef/80a7f/puroflux_home_hero_sample.jpg 624w,
/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg 1248w,
/static/92968298086d2e2ffc2294df60e687ef/2e0c6/puroflux_home_hero_sample.jpg 1600w\\" sizes=\\"(max-width: 1248px) 100vw, 1248px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 1248px) 100vw, 1248px\\" srcset=\\"/static/92968298086d2e2ffc2294df60e687ef/82399/puroflux_home_hero_sample.jpg 313w,
/static/92968298086d2e2ffc2294df60e687ef/80a7f/puroflux_home_hero_sample.jpg 624w,
/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg 1248w,
/static/92968298086d2e2ffc2294df60e687ef/2e0c6/puroflux_home_hero_sample.jpg 1600w\\" src=\\"/static/92968298086d2e2ffc2294df60e687ef/5fd0a/puroflux_home_hero_sample.jpg\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
  <div
    className="sc-htpNat gBgjow"
  />
</div>
`;

exports[`Hero Unit renders correctly for the home page 1`] = `
<div
  className="sc-bdVaJa jZZYJj"
>
  <div
    className="sc-bwzfXH cmhBNl gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "36.0625%",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAHABQDASIAAhEBAxEB/8QAFwABAAMAAAAAAAAAAAAAAAAAAAEDBP/EABcBAAMBAAAAAAAAAAAAAAAAAAABAgT/2gAMAwEAAhADEAAAAccl4qwP/8QAFhAAAwAAAAAAAAAAAAAAAAAAABAR/9oACAEBAAEFAlD/xAAVEQEBAAAAAAAAAAAAAAAAAAAAEf/aAAgBAwEBPwFX/8QAFBEBAAAAAAAAAAAAAAAAAAAAEP/aAAgBAgEBPwE//8QAFBABAAAAAAAAAAAAAAAAAAAAEP/aAAgBAQAGPwJ//8QAGRAAAQUAAAAAAAAAAAAAAAAAAAERMUGB/9oACAEBAAE/IaFjBx//2gAMAwEAAgADAAAAEH/P/8QAFREBAQAAAAAAAAAAAAAAAAAAABH/2gAIAQMBAT8QU//EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAECAQE/EGf/xAAZEAEAAgMAAAAAAAAAAAAAAAABACERgZH/2gAIAQEAAT8QHaLmMlhU/9k="
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "transitionDelay": "500ms",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 1248px) 100vw, 1248px"
        srcSet="/static/c1fabd29bf37bbd2513391955d7ee25c/82399/puroflux_home_hero_pf_4060.jpg 313w,
/static/c1fabd29bf37bbd2513391955d7ee25c/80a7f/puroflux_home_hero_pf_4060.jpg 624w,
/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg 1248w,
/static/c1fabd29bf37bbd2513391955d7ee25c/2e0c6/puroflux_home_hero_pf_4060.jpg 1600w"
      />
      <img
        alt=""
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 1248px) 100vw, 1248px"
        src="/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg"
        srcSet="/static/c1fabd29bf37bbd2513391955d7ee25c/82399/puroflux_home_hero_pf_4060.jpg 313w,
/static/c1fabd29bf37bbd2513391955d7ee25c/80a7f/puroflux_home_hero_pf_4060.jpg 624w,
/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg 1248w,
/static/c1fabd29bf37bbd2513391955d7ee25c/2e0c6/puroflux_home_hero_pf_4060.jpg 1600w"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcset=\\"/static/c1fabd29bf37bbd2513391955d7ee25c/82399/puroflux_home_hero_pf_4060.jpg 313w,
/static/c1fabd29bf37bbd2513391955d7ee25c/80a7f/puroflux_home_hero_pf_4060.jpg 624w,
/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg 1248w,
/static/c1fabd29bf37bbd2513391955d7ee25c/2e0c6/puroflux_home_hero_pf_4060.jpg 1600w\\" sizes=\\"(max-width: 1248px) 100vw, 1248px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 1248px) 100vw, 1248px\\" srcset=\\"/static/c1fabd29bf37bbd2513391955d7ee25c/82399/puroflux_home_hero_pf_4060.jpg 313w,
/static/c1fabd29bf37bbd2513391955d7ee25c/80a7f/puroflux_home_hero_pf_4060.jpg 624w,
/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg 1248w,
/static/c1fabd29bf37bbd2513391955d7ee25c/2e0c6/puroflux_home_hero_pf_4060.jpg 1600w\\" src=\\"/static/c1fabd29bf37bbd2513391955d7ee25c/5fd0a/puroflux_home_hero_pf_4060.jpg\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
  <div
    className="sc-htpNat gBgjow"
  />
</div>
`;
